# swarm

./: .gitignore  LICENSE  README.md  vercel.json
agents/: .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
agents/app/: __init__.py  config.py  main.py  models.py
agents/app/crew/: __init__.py  agents.py  customer_support_crew.py  tasks.py
contracts/: .env.example  .gitignore  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: AgentPayments.sol  Constants.sol  JobEscrow.sol  MNEE.sol  SwarmRegistry.sol
contracts/test/: AgentPayments.t.sol  JobEscrow.t.sol  Setup.t.sol  SwarmRegistry.t.sol
swarm/: .env.example  DEMO_VIDEO_SCRIPT.md  next.config.mjs  package-lock.json  package.json  prisma.config.ts  tailwind.config.ts  vercel.json
swarm/prisma/: schema.prisma
swarm/scripts/: DEMO_SETUP.md  seed-demo-data.ts
swarm/src/app/: globals.css  layout.tsx  page.tsx
swarm/src/app/dashboard/: page.tsx
swarm/src/app/demo/: layout.tsx  page.tsx
swarm/src/app/marketplace/: page.tsx
swarm/src/components/bid/: index.ts  (+1 more)
swarm/src/hooks/: index.ts  use-job-progress.ts  use-marketplace-events.ts  use-swarm-payments.ts  use-toast.ts  use-wallet-or-demo.ts
swarm/src/lib/: constants.ts  date-utils.ts  errors.ts  prisma.ts  pusher-client.ts  pusher-server.ts  queue.ts  redis.ts  trpc.ts  wagmi.ts
swarm/src/server/: trpc.ts
swarm/src/store/: demo-store.ts  index.ts  job-store.ts  realtime-store.ts  swarm-store.ts
swarm/src/types/: index.ts
swarm/src/workers/: index.ts  job-execution-worker.ts  notifications-worker.ts
(+56 files in other folders)
